[package]
name = "homography-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.17.0"
eframe = "0.17.0"
epi = "0.17.0"
image = { version = "0.24", features = ["jpeg", "png"] }
imageproc = "0.23.0"
conv = "0.3.3"
