[package]
name = "homography-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
image = { version = "0.24", features = ["jpeg", "png"] }
imageproc = "0.23.0"
conv = "0.3.3"
derivative = "2.2.0"
arrsac = "0.10.0"
tinyfiledialogs = "3.1"
nalgebra = "0.30.1"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2

[patch.crates-io]

